# gantz

./: Cargo.toml  README.md  Trunk.toml  Trunk.worklet.toml  flake.nix  gantz.js  index.html  shell-web.nix
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bevy_gantz/: CHANGELOG.md  Cargo.toml
crates/bevy_gantz/src/: audio.rs  builtin.rs  dsp.rs  head.rs  lib.rs  reg.rs  storage.rs  vm.rs
crates/bevy_gantz_egui/: CHANGELOG.md  Cargo.toml
crates/bevy_gantz_egui/src/: base.rs  lib.rs  pane_window.rs  reg.rs  storage.rs  vm.rs
crates/bevy_gantz_egui/src/node/: mod.rs  tick_bang.rs  update_bang.rs
crates/bevy_gantz_plyphon/: CHANGELOG.md  Cargo.toml
crates/bevy_gantz_plyphon/examples/: custom_unit.rs
crates/bevy_gantz_plyphon/src/: lib.rs
crates/bevy_gantz_plyphon/tests/: plugin_order.rs
crates/gantz/: CHANGELOG.md  Cargo.toml
crates/gantz/src/: builtin.rs  main.rs  main_update_base.rs  node.rs  pane_window.rs  persist.rs  window.rs
crates/gantz/web/: index.html  prepend-polyfill.sh  textcodec-polyfill.js
crates/gantz/web/worklet/: index.html  prepend-polyfill.sh
crates/gantz_base/: CHANGELOG.md  Cargo.toml  base.gantz
crates/gantz_ca/: CHANGELOG.md  Cargo.toml
crates/gantz_ca/src/: commit.rs  datum.rs  diff.rs  edge.rs  graph.rs  history.rs  lib.rs  merge.rs  name.rs  node_data.rs  ops.rs  reach.rs  registry.rs  section.rs  sync.rs
crates/gantz_ca/tests/: sync_convergence.rs
crates/gantz_ca_derive/: CHANGELOG.md  Cargo.toml
crates/gantz_collab/: Cargo.toml
crates/gantz_collab/src/: identity.rs  lib.rs  proto.rs  runtime.rs  session.rs  store.rs  ticket.rs
crates/gantz_collab/tests/: localhost.rs
crates/gantz_core/: CHANGELOG.md  Cargo.toml
crates/gantz_core/src/: args.rs  builtin.rs  compile.rs  data.rs  datum.rs  edge.rs  graph.rs  lib.rs  node.rs  reg.rs  visit.rs  vm.rs
crates/gantz_core/src/node/: apply.rs  branch.rs  delay.rs  expr.rs  fn_.rs  graph.rs  id.rs  pull.rs  push.rs  ref_.rs  state.rs
crates/gantz_core/tests/: fn_apply.rs  graph.rs
crates/gantz_egui/: CHANGELOG.md  Cargo.toml
crates/gantz_egui/examples/: demo.rs
crates/gantz_egui/src/: cycle.rs  export.rs  format.rs  lib.rs  merge.rs  node.rs  ops.rs  reg.rs  response.rs  section.rs  sync.rs  test_node.rs  ui_tree.rs  widget.rs
crates/gantz_egui/src/impls/: apply.rs  bang.rs  branch.rs  delay.rs  expr.rs  identity.rs  inlet.rs  log.rs  number.rs  outlet.rs
crates/gantz_egui/src/node/: comment.rs  dyn_node.rs  fn_named_ref.rs  inspect.rs  named_ref.rs  plot.rs  ref_ext.rs  size_sync.rs
crates/gantz_egui/src/ui_tree/: plot.rs
crates/gantz_egui/src/widget/: audio_settings.rs  dsp_settings.rs  edge_style.rs  ext_pane.rs  gantz.rs  graph_config.rs  graph_scene.rs  graph_select.rs  gui_debug.rs  head_name_edit.rs  history_view.rs  node_inspector.rs  panes_config.rs  settings.rs
crates/gantz_format/: CHANGELOG.md  Cargo.toml
crates/gantz_format/src/: datum.rs  error.rs  lib.rs  lower.rs  model.rs  parse.rs  raise.rs  sugar.rs  writer.rs
crates/gantz_nodetag/: CHANGELOG.md  Cargo.toml
crates/gantz_nodetag/src/: lib.rs
crates/gantz_nodetag_derive/: CHANGELOG.md  Cargo.toml
crates/gantz_plyphon/: CHANGELOG.md  Cargo.toml  base.gantz
crates/gantz_plyphon/src/: asset.rs  backend.rs  builtin.rs  compile.rs  config.rs  describe.rs  dsp.rs  flatten.rs  instance.rs  lib.rs  monitor.rs  param.rs  port_info.rs  ref_ext.rs  settings.rs  sugar.rs
crates/gantz_plyphon/src/egui/: edge_style.rs  mod.rs  pane.rs  param.rs  ref_ext.rs  settings.rs
crates/gantz_plyphon/src/egui/node/: bus.rs  lag.rs  mod.rs  out.rs  pack.rs  play_buf.rs  scope_out.rs  sin_osc.rs  sum.rs  unpack.rs
crates/gantz_plyphon/src/node/: bus.rs  lag.rs  mod.rs  out.rs  pack.rs  play_buf.rs  scope_out.rs  sin_osc.rs  sine.rs  sum.rs  tap.rs  unpack.rs
crates/gantz_plyphon/src/ui/: node.rs  ref_ext.rs
crates/gantz_plyphon/tests/: derive_regions.rs  derive_synthdef.rs  flatten.rs  instance.rs  port_info.rs  ref_ext.rs
crates/gantz_std/: CHANGELOG.md  Cargo.toml
crates/gantz_std/src/: bang.rs  lib.rs  log.rs  number.rs
crates/gantz_ui/: CHANGELOG.md  Cargo.toml
crates/gantz_ui/src/: codec.rs  decode.rs  diag.rs  elem.rs  encode.rs  lib.rs  sexpr.rs
crates/gantz_ui/src/codec/: datum.rs  steel.rs
crates/gantz_ui/tests/: cross_codec.rs  roundtrip_datum.rs  roundtrip_steel.rs
pkgs/: gantz-unwrapped.nix  gantz-website-legacy.nix  gantz-website.nix  serve-gantz-website.nix  wasm-threads-env.nix
