[package]
name = "bevy_gantz_plyphon"
version = "0.1.0"
description = "Bevy + plyphon audio runtime for gantz: a cpal output stream driving synthdefs derived from DSP graphs."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
cpal.workspace = true
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_plyphon.workspace = true
log.workspace = true
plyphon.workspace = true

bevy_gantz.workspace = true

# Web-only: cpal's wasm backend. Without the `audioworklet` feature this is the default
# Web Audio (ScriptProcessor) host; with it, cpal's AudioWorklet host is selected instead.
# `web-sys` (Window) lets the app detect the worklet thread (see `on_worklet_thread`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { workspace = true, features = ["wasm-bindgen"] }
web-sys = { workspace = true, features = ["Window"] }

[features]
# Opt into cpal's AudioWorklet backend on the web. Only ever enable this for `wasm32`
# builds compiled with WASM atomics + `-Z build-std` (see `pkgs/wasm-threads-env.nix`) -
# cpal only exposes the host under `target_feature = "atomics"`.
audioworklet = ["cpal/audioworklet"]

[dev-dependencies]
# The `custom_unit` example runs a minimal headless bevy app.
bevy.workspace = true
# For deriving `Pod`/`Zeroable` on a custom unit's state.
bytemuck = { version = "1", features = ["derive"] }
