[package]
name = "gantz"
version = "0.2.2"
description = "An environment for creative systems."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
default-run = "gantz"

[dependencies]
async-channel.workspace = true
bevy.workspace = true
bevy_egui.workspace = true
bevy_gantz.workspace = true
bevy_gantz_egui.workspace = true
bevy_gantz_plyphon.workspace = true
bevy_pkv.workspace = true
dyn-clone.workspace = true
dyn-hash.workspace = true
egui_graph.workspace = true
gantz_base.workspace = true
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_egui.workspace = true
gantz_format.workspace = true
gantz_plyphon = { workspace = true, features = ["egui"] }
gantz_std.workspace = true
petgraph.workspace = true
serde.workspace = true
steel-core.workspace = true
web-time.workspace = true

[features]
# cpal's AudioWorklet backend on the web - audio on a dedicated Web Audio thread, off the
# deprecated main-thread ScriptProcessor host. Enabled by default (the shipped website is the
# AudioWorklet build); the cpal deps it pulls are wasm32-gated, so it is a no-op on native. Build
# with `--no-default-features` to fall back to cpal's default ScriptProcessor host on the web. The
# website build supplies the WASM-threads flags it needs (see `pkgs/gantz-website.nix`).
default = ["audioworklet"]
audioworklet = ["bevy_gantz_plyphon/audioworklet"]

[dev-dependencies]
ron.workspace = true

[[bin]]
name = "gantz"
path = "src/main.rs"

[[bin]]
name = "update-base"
path = "src/main_update_base.rs"
