[package]
name = "gantz_ca"
version = "0.3.0"
description = "Content-addressing for gantz"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
blake3.workspace = true
gantz_ca_derive.workspace = true
hex.workspace = true
petgraph.workspace = true
serde.workspace = true

[dev-dependencies]
ron.workspace = true
