[package]
name = "gantz_ca_derive"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Derive macro for CaHash trait"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
