[package]
name = "gantz_core"
version = "0.4.1"
description = "The core types and traits for gantz, an environment for creative systems."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
gantz_ca.workspace = true
gantz_nodetag.workspace = true
log.workspace = true
petgraph.workspace = true
serde.workspace = true
steel-core.workspace = true
thiserror.workspace = true
web-time.workspace = true

[dev-dependencies]
env_logger.workspace = true
serde_json.workspace = true
steel-derive.workspace = true
