[package]
name = "gantz_format"
version = "0.3.0"
description = "Human-readable text format for gantz graph registries."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_nodetag.workspace = true
log.workspace = true
petgraph.workspace = true
serde.workspace = true
steel-core.workspace = true

[dev-dependencies]
serde_json.workspace = true
