[package]
name = "gantz_nodetag"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Wire tags identifying gantz node types across serialization formats"

[dependencies]
gantz_nodetag_derive.workspace = true
