[package]
name = "gantz_nodetag_derive"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Derive macro for the gantz_nodetag NodeTag trait"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
