[package]
name = "gantz_plyphon"
version = "0.1.0"
description = "DSP nodes and a synthdef compiler that derives plyphon synthdefs from gantz graphs."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
egui.workspace = true
egui_extras.workspace = true
egui_graph.workspace = true
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_egui.workspace = true
gantz_nodetag.workspace = true
log.workspace = true
petgraph.workspace = true
plyphon.workspace = true
serde.workspace = true

[dev-dependencies]
petgraph.workspace = true
ron.workspace = true
