[package]
name = "gantz_plyphon"
version = "0.1.1"
description = "DSP nodes and a synthdef compiler that derives plyphon synthdefs from gantz graphs."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[features]
default = ["egui"]
# The egui-flavoured impls (`NodeUi`, the DSP settings tab, the reference
# inspector's `inline` toggle). Without it the crate is headless: DSP nodes,
# the synthdef compiler and the domain config, with no egui in the tree.
egui = ["dep:egui", "dep:egui_extras", "dep:egui_graph", "dep:gantz_egui"]

[dependencies]
egui = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
egui_graph = { workspace = true, optional = true }
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_egui = { workspace = true, optional = true }
gantz_format.workspace = true
gantz_nodetag.workspace = true
log.workspace = true
petgraph.workspace = true
plyphon.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
petgraph.workspace = true
ron.workspace = true
