[package]
name = "gantz_std"
version = "0.3.0"
description = "A standard library of commonly useful nodes for gantz, an environment for creative systems."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_format.workspace = true
gantz_nodetag.workspace = true
log.workspace = true
serde.workspace = true
steel-core.workspace = true
steel-derive.workspace = true

[dev-dependencies]
petgraph.workspace = true
